# cohere-transcribe-arabic-batch-inference

./: .gitignore  CHANGELOG.md  README.md  SETUP.md  VERSION.json  pyproject.toml  requirements-optional.txt  requirements.txt  transcribe.py  validate_install.py
.github/workflows/: ci.yml  release.yml  testpypi.yml
docs/: architecture.md  benchmarks.md  development.md  performance.md  usage.md
reports/: 0.1.0-release-validation.json  0.1.0-release-validation.md  0.1.3-release-validation.md
scripts/: smoke_clean_audio.py  smoke_public_api.py  typecheck_public_api.py
src/cohere_transcribe/: __init__.py  __main__.py  _environment.py  _version.py  cancellation.py  cli.py  config.py  device.py  doctor.py  doctor_support.py  inputs.py  models.py  preflight.py  profiling.py  progress.py  py.typed
src/cohere_transcribe/alignment/: UPSTREAM.md  __init__.py  alignment_utils.py  norm_config.py  runtime.py  text_utils.py
src/cohere_transcribe/api/: __init__.py  input.py  types.py
src/cohere_transcribe/asr/: __init__.py  batching.py  execution.py  generation.py  model.py  orchestration.py
src/cohere_transcribe/audio/: __init__.py  backends.py  decoding.py  preparation.py  segmentation.py
src/cohere_transcribe/output/: __init__.py  pipeline.py  publication.py  rendering.py
src/cohere_transcribe/pipeline/: __init__.py  resources.py  transcription.py
src/cohere_transcribe/runtime/: __init__.py  console.py  engine.py  resources.py  results.py
src/cohere_transcribe/state/: __init__.py  checkpoint.py  contracts.py  io.py  locking.py  manifest.py
src/cohere_transcribe/vad/: README.md  __init__.py  runtime.py  torch_silero.py  vectorized_silero.py
tests/: test_asr_resilience.py  test_audio_backends.py  test_cancellation.py  test_cli.py  test_cli_contract.py  test_cli_filesystem.py  test_cli_preflight.py  test_package.py  test_result_plumbing.py  test_runtime_core.py  test_runtime_enhancements.py  test_runtime_regressions.py  test_segmentation.py  test_state.py  test_torch_silero.py  test_vad_integration.py
tests/api/: __init__.py  _support.py  test_contract.py  test_execution.py  test_lifecycle.py  test_progress.py  test_resilience.py  test_result_regressions.py  test_results.py  test_runtime_integration.py  test_validation.py
